# UAV_aggregator

./: .gitattributes  .gitignore  Cargo.toml  config.xml  config.yaml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: assetsRelease.yml  docs.yml
UAV_aggregator/: all.html  fn.main.html  index.html  macro.printLog!.html  macro.printLog.html  sidebar-items.js
UAV_aggregator/atmosphere/: constant.GRAVITY_ACCELERATION.html  constant.R_AIR_CONSTANT.html  constant.TEMP_ALTITUDE_RATE.html  fn.calcAirInfo.html  fn.calcDensity.html  fn.calcPressure.html  fn.calcTemperature.html  index.html  sidebar-items.js  struct.Atmosphere.html  struct.AtmosphereInfo.html
UAV_aggregator/cargo/: fn.notifyAboutLinks.html  index.html  sidebar-items.js  struct.Cargo.html  struct.Link.html
UAV_aggregator/checksum/: constant.ASSETS_CHECKSUM_PATH.html  constant.ASSETS_PATH.html  fn.calcChecksum.html  fn.getChecksum.html  index.html  sidebar-items.js
UAV_aggregator/clients/: constant.DRONE_CONFIGS_PATH.html  index.html  sidebar-items.js  struct.Clients.html
UAV_aggregator/collision/: fn.getMesh.html  index.html  sidebar-items.js  struct.CollisionDetector.html
UAV_aggregator/config/: constant.CONFIG_FILE_PATH.html  (+10 more)
configs/: aircraft_template.xml  assets_checksum  config.xml  config.yaml
logs/: check.m
scripts/: aero_characteristics.m
src/: atmosphere.rs  cargo.rs  checksum.rs  clients.rs  collision.rs  config.rs  drones.rs  logger.rs  main.rs  map.rs  notification.rs  obj.rs  objects.rs  uav.rs  wind.rs
tests/: Cargo.toml
(+96 files in other folders)
