[package]
name = "UAV_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
device_query = "1.1.3"
nalgebra = "0.32.3"
rand = "0.8.5"
serde_yaml = "0.9.25"
xmltree = "0.10.3"
zmq = "0.10"
